--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -143,15 +143,15 @@
   %  \item[$\mathcal{N}$] Unused.
   \item[$\getringroot{\dots}$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\zeropad{n}{\dots}$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
-  \item[$\seqfromhash(\dots)$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
-  \item[$\ecrecover$] The group of erasure-coding piece-recovery functions.
-  \item[$\signdata\sub{k}(\dots)$] The general signature function. See section \ref{sec:cryptography}.
+  \item[$\seqfromhash{}{\dots}$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
+  \item[$\ecrecover{\dots}$] The group of erasure-coding piece-recovery functions.
+  \item[$\signdata{k}{\dots}$] The general signature function. See section \ref{sec:cryptography}.
   \item[$\wallclock$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
-  \item[$\subifnone(\dots)$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
+  \item[$\subifnone{\dots}$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
   \item[$\values{\dots}$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
-  \item[$\sext\sub{n}(\dots)$] The signed-extension function for a value in $\Nbits{8n}$. See equation \ref{eq:signedextension}.
-  \item[$\banderout(\dots)$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-  \item[$\tosigned\sub{n}(\dots)$] The into-signed function for a value in $\Nbits{8n}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
+  \item[$\sext{n}{\dots}$] The signed-extension function for a value in $\Nbits{8n}$. See equation \ref{eq:signedextension}.
+  \item[$\banderout{\dots}$] The alias/output/entropy function of a Bandersnatch \textsc{vrf} signature/proof. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+  \item[$\fntosigned{n}(\dots)$] The into-signed function for a value in $\Nbits{8n}$. Superscripted with ${}^{-1}$ to denote the inverse. See equation \ref{eq:signedfunc}.
 \end{description}
 
 \subsection{Values}
