--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -160,11 +160,11 @@ Finally, the service statistics are updated using the same intermediate values a
       }\,,\;\\
       \is{\ss¬accumulation&}{
         \span\span
-        \subifnone(\accumulationstatistics\subb{s}, \tup{0, 0})
+        \subifnone{\accumulationstatistics\subb{s}, \tup{0, 0}}
       }\,,\; \ \ \\
       \is{\ss¬xferral&}{
         \span\span
-        \subifnone(\deferredtransfersstatistics\subb{s}, \tup{0, 0})
+        \subifnone{\deferredtransfersstatistics\subb{s}, \tup{0, 0}}
       } \quad\\
     \end{alignedat}
   }\!\!\!\!\\
