--- a/text/utilities.tex
+++ b/text/utilities.tex
@@ -11,9 +11,9 @@ The Fisher-Yates shuffle function is defined formally as:
   }
 \end{equation}
 
-Since it is often useful to shuffle a sequence based on some random seed in the form of a hash, we provide a secondary form of the shuffle function $\fnfyshuffle$ which accepts a 32-byte hash instead of the numeric sequence. We define $\seqfromhash$, the numeric-sequence-from-hash function, thus:
+Since it is often useful to shuffle a sequence based on some random seed in the form of a hash, we provide a secondary form of the shuffle function $\fnfyshuffle$ which accepts a 32-byte hash instead of the numeric sequence. We define $\fnseqfromhash{}$, the numeric-sequence-from-hash function, thus:
 \begin{align}
-  \forall l \in \N:\ \seqfromhash\sub{l}&\colon\abracegroup{
+  \forall l \in \N:\ \fnseqfromhash{l}&\colon\abracegroup{
     \hash &\to \sequence{\Nbits{32}}\sub{l}\\
     h &\mapsto \sq{\build{
       \fixeddecode{4}{\blake{h \concat \fixedencode{4}{\floor{\nicefrac{i}{8}}}}
@@ -25,6 +25,6 @@ Since it is often useful to shuffle a sequence based on some random seed in the 
   \label{eq:sequencefromhash}
   \forall T, l \in \N:\ \fnfyshuffle&\colon\abracegroup{
     \tuple{\sequence{T}\sub{l}, \hash} &\to \sequence{T}\sub{l}\\
-    \tup{\mathbf{s}, h} &\mapsto \fyshuffle{\mathbf{s}, \seqfromhash\sub{l}(h)}
+    \tup{\mathbf{s}, h} &\mapsto \fyshuffle{\mathbf{s}, \seqfromhash{l}{h}}
   }
 \end{align}
